# spw_rmap

./: .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  build.sh  flake.nix  pyproject.toml  treefmt.toml
.github/workflows/: ci.yml  publish.yml
app/: CMakeLists.txt  spwrmap.cc  spwrmap_speedtest.cc  timecode.cc
bindings/python/: CMakeLists.txt  README.md
bindings/python/pyspw_rmap/: __init__.py  _core.pyi
bindings/python/src/: pyspw_rmap.cc  span_caster.hh
cmake/: SpwRmapConfig.cmake.in
examples/: CMakeLists.txt  crc.cc  legacy_spw.cc  packet_builder.cc  spw_test.cc  spwrmap.cc  spwrmap_example.cc  spwrmap_example.py  spwrmap_example_async.cc  spwrmap_example_sync.cc  spwrmap_simple_example.cc  spwrmap_speedtest.cc  spwrmap_speedtest_multiple.cc  spwrmap_speedtest_read.cc  spwrmap_tcp_node_client.cc  spwrmap_tcp_node_server.cc  tcp_client.cc  tcp_server.cc  test_spwclient.cc  test_spwrmap.cc  test_spwserver.cc
fuzz/: CMakeLists.txt  parse_rmap_packet_fuzz.cc  rmap.dict
fuzz/corpus/: smoke
include/: SpwRmap.hh
include/SpwRmap/: CRC.hh  DummySpwRmap.hh  LegacySpwRmap.hh  LegacySpwRmapTCPNode.hh  PacketBuilder.hh  PacketParser.hh  RMAPPacketType.hh  SpwRmap.hh  SpwRmapBase.hh  SpwRmapNodeBase.hh  SpwRmapTCPNode.hh  TargetNode.hh
include/SpwRmap/internal/: TCPClient.hh  TCPServer.hh
include/SpwRmap/testing/: SpwServer.hh
include/spw_rmap/: crc.hh  error_code.hh  packet_builder.hh  packet_parser.hh  rmap_packet_type.hh  spw_rmap_node_base.hh  spw_rmap_tcp_node.hh  spw_rmap_tcp_node_server.hh  target_node.hh  transaction_database.hh
include/spw_rmap/internal/: debug.hh  profiler.hh  spw_rmap_tcp_node_impl.hh  spw_rmap_tcp_node_server.hh  tcp_client.hh  tcp_server.hh  thread_pool.hh  transaction_database.hh
src/: CMakeLists.txt  CRC.cc  LegacySpwRmap.cc  LegacySpwRmapTCPNode.cc  PacketBuilder.cc  PacketParser.cc  SpwRmap.cc  SpwRmapTCPNode.cc  TCPClient.cc  TCPServer.cc  error_code.cc  packet_builder.cc  packet_parser.cc  spw_rmap_tcp_node.cc  spw_rmap_tcp_node_server.cc  target_node.cc  tcp_client.cc  tcp_server.cc  thread_pool.cc
tests/: CMakeLists.txt  test_dummy_spwrmap.cc  test_internal_tcp.cc  test_legacy_spwrmap.cc  test_packet.cc  test_packet_builder.cc  test_packet_parser.cc  test_python_bindings.py  test_rmap_server.hh  test_spw_rmap_node.cc  test_spwrmap.cc  test_spwrmap_base.cc  test_target_node.cc  test_thread_safety.cc  test_transaction_database.cc
workdir/: pyspw_rmap  test.py
